# xcmd-sciter

./: .gitignore  Cargo.toml  README.md  build.rs
.circleci/: config.yml
config/: classic.color-theme.json  classic.color-theme.toml  dark.color-theme.json  dark.color-theme.toml  keybindings.json  light.color-theme.json  light.color-theme.toml  linux.key-map.toml  macos.key-map.toml  windows.key-map.toml
lib/: libsciter-gtk.so.br  libsciter-gtk.so.br.sha256  sciter-osx-64.dylib.br  sciter-osx-64.dylib.br.sha256  sciter.dll.br  sciter.dll.br.sha256
src/: column.rs  com.rs  data_source.rs  main.exe.manifest  main.rc  main.rs  name_renderer.rs  pane.rs  repository.rs  self_update.rs  shell.html  shortcut.rs  size_renderer.rs  template.rs  text_renderer.rs  ui.rs  window_event_handler.rs
src/app/xcmd/: copy.sciter.html  script.tis  shell.sciter.html  style.sciter.css
src/com/: com_library.rs  com_ptr.rs  persist_file.rs  shell_link.rs  wchar.rs
src/data_source/: data_source.rs
src/include/: w32api.h
src/ui/: column.rs  name_renderer.rs  palette.rs  pane.rs  renderer.rs  size_renderer.rs  template.rs  text_renderer.rs  window_event_handler.rs  window_sciter_handler.rs
src/xcmd_core/: Cargo.toml
src/xcmd_core/src/: errors.rs  lib.rs
src/xcmd_core/src/api/: mod.rs
src/xcmd_core/src/local/: mod.rs
src/xcmd_core/src/sftp/: mod.rs
