[package]
name = "xcmd"
version = "0.1.1"
authors = ["xcmd.io <developer@xcmd.io>"]
autobins = false

[dependencies]
sciter-rs = "*"
separator = "*"
semver = { version = "*", features = ["serde"] }
xcmd_core = { path = "src/xcmd_core" }
reqwest = "*"
url = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
url_serde = "*"
regex = "*"
toml = "*"
brotli = "*"
sha2 = "*"
log = "*"
env_logger = "*"

[build-dependencies]
brotli = "*"
sha2 = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["objbase", "combaseapi", "unknwnbase", "winnt", "coml2api", "minwinbase", "impl-default", "shtypes", "guiddef"] }

[target.'cfg(windows)'.build-dependencies]
windres = "*"
ar = "*"
embed-resource = "*"

[[bin]]
name = "xcmd"
path = "src/main.rs"
